@@ -47,7 +47,7 @@
     </tr>
   </tbody>
 </table>
-<hr style="width: 100%; height: 2px;"><span style="font-weight: bold;">2009-06-17</span><br>
+<hr style="width: 100%; height: 2px;"><span style="font-weight: bold;">2009-06-18</span><br>
 <h3><a href="Notices.html#Shell-EOL">Attention Shorewall-shell users</a><br>
 </h3>
 <h3><a name="Releases"></a>Current Shorewall Releases</h3>
@@ -60,13 +60,13 @@
 Stable Release</span><br>
       </div>
       </td>
-      <td style="vertical-align: top;"><span style="font-weight: bold;">4.2.9</span>
+      <td style="vertical-align: top;"><span style="font-weight: bold;">4.2.10</span>
 (includes <a href="IPv6Support.html">IPv6 support.</a>)</td>
       <td style="vertical-align: top;"><a
- href="http://www1.shorewall.net/pub/shorewall/4.2/shorewall-4.2.9/releasenotes.txt">Release
+ href="http://www1.shorewall.net/pub/shorewall/4.2/shorewall-4.2.10/releasenotes.txt">Release
 notes</a> </td>
       <td style="vertical-align: top;"><a
- href="http://www1.shorewall.net/pub/shorewall/4.2/shorewall-4.2.9/known_problems.txt">Known
+ href="http://www1.shorewall.net/pub/shorewall/4.2/shorewall-4.2.10/known_problems.txt">Known
 Problems</a></td>
     </tr>
     <tr>
