@@ -175,6 +175,10 @@ None.
 	To turn that trace off:
 
 	   shorewall noiptrace -d 206.124.146.176
+
+3)  A USER/GROUP column has been added to /etc/shorewall/masq. The
+    column works similarly to USER/GROUP columns in other Shorewall
+    configuration files. Only locally-generated traffic is matched.
 	
 ----------------------------------------------------------------------------
                  N E W   F E A T U R E S   IN   4 . 4
