@@ -18,6 +18,8 @@ Changes in Shorewall 4.4.0-Beta2
 
 7)  Add 'iptrace' and 'noiptrace' command.
 
+8)  Add 'USER/GROUP' column to masq file.
+
 Changes in Shorewall 4.4.0-Beta1
 
 1)  Correct typo in Shorewall6 two-interface sample shorewall.conf.
